# hello-world

./: Makefile  PRIVACY_POLICY.md  README.md  TERMS_OF_USE.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: README.md
projects/: README.md  __init__.py
projects/algorithms/: __init__.py
projects/algorithms/sorting_lab/: README.md  __init__.py  run.py
projects/ml/: __init__.py
projects/ml/noisy_sine_cnn/: README.md  __init__.py  run.py
projects/physics/: __init__.py
projects/physics/harmonic_oscillator/: README.md  __init__.py  run.py
shared/: __init__.py  text.py  timing.py
tests/: test_harmonic_oscillator.py  test_noisy_sine_cnn.py  test_sorting_lab.py
