[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toybox"
version = "0.1.0"
description = "A lightweight toybox for small computational and scientific experiments."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "herrrhesse-bot", email = "herrrhesse@gmail.com" }
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["projects*", "shared*"]
